code/queryExecutor/src/experimentseswc/ConjunctiveQueryParser.java
/* Generated By:JavaCC: Do not edit this line. ConjunctiveQueryParser.java */
package experimentseswc;
import java.util.HashMap;
import java.util.HashSet;
import java.util.ArrayList;
public class ConjunctiveQueryParser implements ConjunctiveQueryParserConstants {

  final public ArrayList<ConjunctiveQuery> ParseMappings() throws ParseException {
  ConjunctiveQuery m;
  ArrayList<ConjunctiveQuery> ms;
    m = ParseConjunctiveQuery();
    ms = ParseMappingsOpt();
      ms.add(0, m);
      {if (true) return ms;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<ConjunctiveQuery> ParseMappingsOpt() throws ParseException {
   ArrayList<ConjunctiveQuery> ms;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      ms = ParseMappings();
      {if (true) return ms;}
      break;
    default:
      jj_la1[0] = jj_gen;
      {if (true) return new ArrayList<ConjunctiveQuery>();}
    }
    throw new Error("Missing return statement in function");
  }

  final public ConjunctiveQuery ParseConjunctiveQuery() throws ParseException {
  Predicate h;
  ArrayList<Predicate> b;
    h = Predicate();
    jj_consume_token(IF);
    b = PredicateList();
      {if (true) return new ConjunctiveQuery(h, b);}
    throw new Error("Missing return statement in function");
  }

  final public Predicate Predicate() throws ParseException {
  Token n;
  ArrayList<String> al;
    n = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    al = ArgumentList();
    jj_consume_token(RPAREN);
          {if (true) return new Predicate(n.image, al);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Predicate> PredicateList() throws ParseException {
  ArrayList<Predicate> pl;
  Predicate p;
    p = Predicate();
    pl = PredicateListOpt();
          pl.add(0, p);
          {if (true) return pl;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Predicate> PredicateListOpt() throws ParseException {
  ArrayList<Predicate> pl;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      pl = PredicateList();
      {if (true) return pl;}
      break;
    default:
      jj_la1[1] = jj_gen;
      {if (true) return new ArrayList<Predicate>();}
    }
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<String> ArgumentList() throws ParseException {
  ArrayList<String> al;
  Token a;
    a = jj_consume_token(ID);
    al = ArgumentListOpt();
          al.add(0, a.image);
          {if (true) return al;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<String> ArgumentListOpt() throws ParseException {
  ArrayList<String> al;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      al = ArgumentList();
      {if (true) return al;}
      break;
    default:
      jj_la1[2] = jj_gen;
      {if (true) return new ArrayList<String>();}
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public ConjunctiveQueryParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[3];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x100,0x20,0x20,};
   }

  /** Constructor with InputStream. */
  public ConjunctiveQueryParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ConjunctiveQueryParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ConjunctiveQueryParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ConjunctiveQueryParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ConjunctiveQueryParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ConjunctiveQueryParser(ConjunctiveQueryParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ConjunctiveQueryParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[9];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 3; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 9; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
